# nik

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: index.md  quick-start.md
docs/fundamentals/: routing.md
scripts/: docs  lint  test
src/nik/: logger.py
src/nik/server/: app.py  cookies.py  request.py  response.py  types.py
src/nik/server/authentication/: securecookie.py  session.py
src/nik/server/errors/: __init__.py  error_handler.py  errors.py  views.py
src/nik/server/routes/: auth.py  codegen.py  context.py  handler.py  renderer.py  router.py  static.py
src/nik/utils/: asyncio.py  string.py
src/nik/views/: actions.py  callbacks.py  client.js  context.py  data.py
src/nik/views/elements/: __init__.py  base.py  embedded.py  form.py  metadata.py  root.py  sectioning.py  text.py
tests/: conftest.py  utils.py
tests/fixtures/: dynamic_view_int.py  dynamic_view_str.py  layout_with_children.py  simple_view.py  snapshot_action_and_partial.py.txt  snapshot_basic_structure.py.txt  snapshot_with_permissions.py.txt  view_action_partial.py
tests/fixtures/app/: _routesgen.py
tests/fixtures/app/routes/: layout.py  route.py
tests/fixtures/public/: llm.txt
tests/server/: test_app.py  test_cookies.py  test_functional.py  test_request.py  test_response.py  test_static.py
tests/server/authentication/: test_secure_cookie.py  test_session.py
tests/server/routes/: test_auth.py
tests/server/routes/codegen/: test_codegen_component_info.py  test_codegen_generate_routes.py  (+1 more)
(+11 files in other folders)
